--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,16 @@ plugins {
     id 'java'
     id 'jacoco'
     id "org.owasp.dependencycheck" version "6.5.3"
+    id "org.sonarqube" version "4.3.1.3277"
+
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "santiagocardenasfranco"
+        property "sonar.organization", "SantiagoCardenasFranco"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 group = 'co.edu.uco.burstcar'
