--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'adopt'
           cache: gradle
+      - name: Give gradlew execution permission
+        run: chmod +x ./gradlew
+        
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
