--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ plugins {
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "santiagocardenasfranco"
-        property "sonar.organization", "SantiagoCardenasFranco"
+        property "sonar.projectKey", "SantiagoCardenasFranco_prueba"
+        property "sonar.organization", "santiagocardenasfranco"
         property "sonar.host.url", "https://sonarcloud.io"
     }
 }
