--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 sonarqube {
     properties {
         property "sonar.projectKey", "SantiagoCardenasFranco_prueba"
-        property "sonar.organization", "santiagocardenasfranco"
+        property "sonar.organization", "SantiagoCardenasFranco"
         property "sonar.host.url", "https://sonarcloud.io"
     }
 }
