--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,15 @@ plugins {
     id 'java'
     id 'jacoco'
     id "org.owasp.dependencycheck" version "6.5.3"
-    id "org.sonarqube" version "4.3.1.3277"
-
+    id "org.sonarqube" version "6.0.1.5171"
 }
 
-sonarqube {
-    properties {
-        property "sonar.projectKey", "SantiagoCardenasFranco_prueba"
-        property "sonar.organization", "SantiagoCardenasFranco"
-        property "sonar.host.url", "https://sonarcloud.io"
-    }
+sonar {
+  properties {
+    property "sonar.projectKey", "SantiagoCardenasFranco_prueba"
+    property "sonar.organization", "santiagocardenasfranco"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 group = 'co.edu.uco.burstcar'
