--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop1]
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop1]
     types: [opened, synchronize, reopened]
 jobs:
   build:
